Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/MethodReference45.out
MethodReference45.java:38:9: compiler.err.ref.ambiguous: g2, kindname.method, g2(MethodReference45.SAM1), MethodReference45, kindname.method, g2(MethodReference45.SAM2), MethodReference45
1 error
